# margaret

./: .gitignore  .gitmodules  README.md
catkin_ws/src/margaret_bmi/: CMakeLists.txt  package.xml
catkin_ws/src/margaret_bmi/launch/: margaret_bmi.launch
catkin_ws/src/margaret_bmi/src/: bno055RawToImu_node.cpp  xv11RawToLaserScan_node.cpp
firmware/margaret_stm32f767zi_fw/: platformio.ini
firmware/margaret_stm32f767zi_fw/lib/AX12/: AX12.cpp  AX12.h
firmware/margaret_stm32f767zi_fw/lib/BNO055_fusion/: BNO055.cpp  BNO055.h
firmware/margaret_stm32f767zi_fw/lib/PID/: PID.cpp  PID.h
firmware/margaret_stm32f767zi_fw/lib/Rosserial_Arduino_Library/src/: STM32F767ZIHardware.h  ros.h
firmware/margaret_stm32f767zi_fw/lib/STM32duino_STM32Ethernet/src/: lwipopts_default.h
firmware/margaret_stm32f767zi_fw/lib/STM32duino_STM32Ethernet/src/utility/: ethernetif.cpp  ethernetif.h
firmware/margaret_stm32f767zi_fw/lib/ros_lib_melodic/: MbedHardwareEthernet.h  ros.h
firmware/margaret_stm32f767zi_fw/lib/ros_lib_melodic/map_msgs/: SaveMap.h
firmware/margaret_stm32f767zi_fw/lib/ros_lib_melodic/ros/: node_handle.h
firmware/margaret_stm32f767zi_fw/lib/xv11_lidar/: xv11_lidar.cpp  xv11_lidar.h
firmware/margaret_stm32f767zi_fw/src/: main.cpp
